--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "author": "",
   "type": "module",
   "license": "ISC",
+  "scripts": {
+		"start": "node server.js"
+	},
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
